# paicos

./: .flake8  .gitignore  .pre-commit-config.yaml  .pytest.ini  .readthedocs.yaml  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.md  arepo_fof.py  arepo_snap.py  cython_functions.pyx  dev_requirements.txt  load_partial_snap.py  project_snapshot.py  pyproject.toml  requirements.txt  run_all_examples.sh  run_all_scripts.sh  run_projections.sh  setup.py  snap_loop_over_halos.py  snap_loop_over_snaps.py  snap_with_multi.py  snap_with_multi_long.py  sph_like_projection.py  timings.py  user_settings_template.py
.circleci/: config.yml
.github/: CONTRIBUTING.md  SUPPORT.md
data/: README.md  arepo-snap-util-proj.npz  arepo-snap-util-slice.npz  reduced_snap_247.hdf5  small_non_comoving_007.hdf5
docs/: requirements.in  requirements.txt
examples/: add_user_units_example.py  binary_tree_example.py  center_of_mass_and_total_angular_momentum_example.py  compare_tree_projector_and_cpu_ray_tracer.py  create_radial_profiles_hdf5file_example.py  example_binary_tree_non_volume_filling_points.py  example_conversions.py  example_cpu_ray_projector.py  example_cpu_ray_projector_expensive.py  example_generic_sim.py  example_paicos_config.py  example_rotate_view.py  example_select.py  gpu_sph_speed_test_example.py  histogram1D_example.py  histogram2d_example.py  image_reader_example.py  loading_data_example.py  nested_plot_few_particles.py  nested_projector_example.py  paicos_2d_time_series_example.py  paicos_examples.ipynb  paicos_time_series_example.py  paicos_writer_example.py  (+18 more)
(+140 files in other folders)
